--- a/src/App.css
+++ b/src/App.css
@@ -6,24 +6,26 @@
   background: linear-gradient(to right, #faaca8, #ddd6f3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   width: 660px;
   margin: 100px auto;
-  height: 600px; 
+  height: 700px; 
 }
 
 .App-header {
   background: #2e302f;
 	color: white;
 	margin: 0;
-	padding: 10px 20px;
+	padding: 10px 10px;
 	text-transform: uppercase;
 	font-size: 24px; 
   font-weight: normal;  
   margin-bottom: 20px;
 }
 
-table {
+.ReactTable {
   margin-left:auto;
   margin-right:auto;
-  width: 500px; 
+  margin-top: 10px;
+  width: 660px; 
+  height: 570px; 
   }
 
   tr:nth-child(even) {
